--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,13 +1,18 @@
-@import "../../node_modules/sigrid/src/sigrid";
+@import 'variables';
+@import 'atoms/typography';
+@import 'atoms/buttons';
+@import 'atoms/borders';
+@import 'atoms/links';
+@import 'atoms/draggable';
+@import 'atoms/pagination';
+@import 'atoms/list';
+@import 'molecules/cards';
+@import 'molecules/header';
+@import 'molecules/form-group';
+@import 'molecules/tabs';
+@import 'molecules/progressbar';
 
-body {
+html, body{
+  padding: 0;
   margin: 0;
-}
-
-.container {
-  padding: 0 15px;
-}
-
-table {
-  width: 100%;
 }
