--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,28 +1,33 @@
-$color-primary-0: #FC3447;
-$color-primary-1: #F80018;
-$color-primary-2: #FB0920;
-$color-primary-3: #FD5D6C;
-$color-primary-4: #FE8C97;
+$color-primary: #FC3447;
+$color-primary-dark: #FB0920;
+$color-primary-darker: #F80018;
+$color-primary-light: #FD5D6C;
+$color-primary-lighter: #FE8C97;
 
-$color-secondary-0: #FF8D35;
-$color-secondary-1: #FF6700;
-$color-secondary-2: #FF7409;
-$color-secondary-3: #FFA45D;
-$color-secondary-4: #FFBE8D;
+$color-secondary: #FF8D35;
+$color-secondary-darker: #FF6700;
+$color-secondary-dark: #FF7409;
+$color-secondary-light: #FFA45D;
+$color-secondary-lighter: #FFBE8D;
 
-$color-tertiary-0: #00AB99;
-$color-tertiary-1: #08D3BD;
-$color-tertiary-2: #2EDDCA;
-$color-tertiary-3: #54E6D6;
-$color-tertiary-4: #84EFE3;
+$color-tertiary: #2EDDCA;
+$color-tertiary-darker: #00AB99;
+$color-tertiary-dark: #08D3BD;
+$color-tertiary-light: #54E6D6;
+$color-tertiary-lighter: #84EFE3;
 
-$color-grey-2: grey;
-$color-grey-3: lightgrey;
-$color-grey-4: #f8f8f8;
 
-$border-color: $color-grey-3;
+$color-grey: #666;
+$color-grey-darker: #222;
+$color-grey-dark: #444;
+$color-grey-light: lightgrey;
+$color-grey-lighter: #f8f8f8;
 
+$border-color: $color-grey-light;
 $border-radius: 50px;
+
+$font-color: $color-grey;
+$font-color-heading: $color-grey-dark;
 
 $font-size: 15px;
 $font-size-sm: 10px;
