--- a/src/styles/atoms/_pagination.scss
+++ b/src/styles/atoms/_pagination.scss
@@ -8,14 +8,13 @@
   border-radius: 10px;
   outline: none;
   font-size: $font-size;
-  color: $color-grey-2;
+  color: $font-color;
   background-color: transparent;
-  border: none;
   border: 1px solid $border-color;
   margin: 0 25px;
   cursor: pointer;
   &:hover{
-    background: $color-grey-4;
+    background: $color-grey-light;
   }
   &:first-child {
     margin-left: 0;
@@ -26,11 +25,11 @@
 }
 
 .pagination__item--active{
-  background-color: $color-secondary-3;
+  background-color: $color-secondary-light;
   color: white;
-  border-color: $color-secondary-3;
+  border-color: $color-secondary-light;
   &:hover{
-    background-color: $color-secondary-3;
+    background-color: $color-secondary-light;
   }
 }
 
