--- a/src/styles/atoms/_typography.scss
+++ b/src/styles/atoms/_typography.scss
@@ -1,24 +1,14 @@
 body {
-  font-family: "Brandon Grotesque";
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 15px;
+  color: $font-color;
 }
 
-h1{
-  font-size: 40px;
-  color: grey;
-  font-weight: 400;
-}
-h2{
-  font-size: 30px;
-  color: grey;
-  font-weight: 400;
-}
-h3 {
-  font-size: 25px;
-  font-weight: 400;
-  color: grey;
-}
-p {
-  font-weight: 400;
-  color: grey;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: 'Roboto Condensed', sans-serif;
+  color: $font-color-heading;
 }
