--- a/src/styles/molecules/_progressbar.scss
+++ b/src/styles/molecules/_progressbar.scss
@@ -1,32 +1,32 @@
-.progress{
+.progress {
   display: flex;
   height: 100px;
   width: 50%;
   margin: 0 auto;
   margin-bottom: 20px;
 }
-.progress__section{
+.progress__section {
   position: relative;
   flex: 1;
   text-align: center;
-  &:before{
-      content: '';
-      border-bottom: 10px solid $color-secondary-3;
-      width: 100%;
-      position: absolute;
-      transform: translate(-100%, -50%);
-      top: 50%;
-      left: 50%;
-      z-index: -2;
-    }
-    &:first-child:before{
-      display: none;
-    }
+  &:before {
+    content: '';
+    border-bottom: 10px solid $color-secondary-light;
+    width: 100%;
+    position: absolute;
+    transform: translate(-100%, -50%);
+    top: 50%;
+    left: 50%;
+    z-index: -2;
+  }
+  &:first-child:before {
+    display: none;
+  }
 }
-.progress__title{
+.progress__title {
   font-size: 18px;
   margin-top: 70px;
-  color: $color-secondary-3;
+  color: $color-secondary-light;
 }
 .progress__dot {
   position: absolute;
@@ -39,24 +39,24 @@
   &:after {
     position: absolute;
     content: '';
-    border: 15px solid $color-secondary-3;
+    border: 15px solid $color-secondary-light;
     border-radius: 100%;
-    height: 0px;
-    width: 0px;
+    height: 0;
+    width: 0;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: -1;
   }
 }
-.progress__section--undone{
+.progress__section--undone {
   &:before{
     border-color: $border-color;
   }
-  .progress__dot::after{
+  .progress__dot::after {
       border-color: $border-color;
     }
-  .progress__title{
-    color: $color-grey-3;
+  .progress__title {
+    color: $color-grey-light;
   }
 }
