--- a/src/styles/molecules/_tabs.scss
+++ b/src/styles/molecules/_tabs.scss
@@ -13,7 +13,7 @@
   flex: 1;
   margin-bottom: -2px;
   padding: 7px 10px;
-  background-color: $color-primary-3;
+  background-color: $color-primary-light;
   border-top-right-radius: 10px;
   font-size: $font-size;
 }
