--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -16,6 +16,7 @@ $color-tertiary-dark: #08D3BD;
 $color-tertiary-light: #54E6D6;
 $color-tertiary-lighter: #84EFE3;
 
+$color-danger: #b3172b;
 
 $color-grey: #666;
 $color-grey-darker: #222;
