--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import "../../node_modules/sigrid/src/sigrid";
 
 @import 'variables';
+@import 'atoms/utilities';
 @import 'atoms/animation';
 @import 'atoms/typography';
 @import 'atoms/buttons';
