--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,6 +21,7 @@
 @import 'molecules/progressbar';
 @import 'molecules/modals';
 @import 'molecules/banners';
+@import 'molecules/dropzone';
 
 html, body{
   padding: 0;
