--- a/src/styles/molecules/_progressbar.scss
+++ b/src/styles/molecules/_progressbar.scss
@@ -9,6 +9,7 @@
   position: relative;
   flex: 1;
   text-align: center;
+  text-decoration: none;
   &:before {
     content: '';
     border-bottom: 10px solid $color-secondary-light;
