WIP-customize-tab

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,7 +11,8 @@
 @import 'atoms/draggable';
 @import 'atoms/pagination';
 @import 'atoms/list';
-
+@import 'atoms/labels';
+@import 'atoms/utilities';
 @import 'molecules/cards';
 @import 'molecules/header';
 @import 'molecules/form-group';
