--- a/src/styles/atoms/_list.scss
+++ b/src/styles/atoms/_list.scss
@@ -1,9 +1,17 @@
 .list{
-  width: 130px;
-  display: inline-block;
+  padding: 0;
   margin: 0;
+  list-style: none;
+}
+
+.list--scrollable {
+  max-height: 300px;
+  overflow: auto;
+  padding: 5px;
+  border-top: 1px solid $border-color;
+  border-bottom: 1px solid $border-color;
 }
 
 .list__item{
-  margin-top: 20px;
+  margin: 5px 0;
 }
