--- a/src/styles/atoms/_labels.scss
+++ b/src/styles/atoms/_labels.scss
@@ -1,7 +1,6 @@
 .label{
   color: $color-grey-lighter;
   padding: 5px;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
+  border-radius: 5px;
   margin: 0 5px;
 }
