--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,7 @@
 @import 'atoms/list';
 @import 'atoms/labels';
 @import 'atoms/utilities';
+@import 'atoms/layouts';
 @import 'molecules/cards';
 @import 'molecules/header';
 @import 'molecules/form-group';
