--- a/src/styles/molecules/_header.scss
+++ b/src/styles/molecules/_header.scss
@@ -3,6 +3,7 @@
   width: 100%;
   height: 60px;
   margin: 0;
+  position: relative;
 }
 
 .header__logo{
@@ -18,14 +19,14 @@
 .header__nav{
   position: absolute;
   right: 40px;
-  top: 30px;
+  top: 50%;
   transform: translateY(-50%);
 
 }
 
 .header__item{
   color: white;
-  font-size: 20px;
   display: inline;
   margin-left: 30px;
+  text-decoration: none;
 }
