Add completion design

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 $color-primary: #FC3447;
-$color-primary-dark: #FB0920;
-$color-primary-darker: #F80018;
+$color-primary-dark: #6e050d;
+$color-primary-darker: #b60015;
 $color-primary-light: #FD5D6C;
 $color-primary-lighter: #FE8C97;
 
