--- a/src/styles/atoms/_links.scss
+++ b/src/styles/atoms/_links.scss
@@ -1,8 +1,7 @@
-.link{
+a {
   text-decoration: none;
   color: white;
-  &:hover{
-    cursor: pointer;
+  &:hover {
     color: $color-tertiary;
   }
 }
