--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,7 @@
 @import 'molecules/tabs';
 @import 'molecules/progressbar';
 @import 'molecules/modals';
+@import 'molecules/banners';
 
 html, body{
   padding: 0;
