--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -22,7 +22,7 @@ $color-grey: #666;
 $color-grey-darker: #222;
 $color-grey-dark: #444;
 $color-grey-light: lightgrey;
-$color-grey-lighter: #f8f8f8;
+$color-grey-lighter: #eee;
 
 $border-color: $color-grey-light;
 $border-radius: 50px;
