--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,8 @@
 @import 'atoms/labels';
 @import 'atoms/utilities';
 @import 'atoms/layouts';
+@import 'atoms/table';
+@import 'atoms/scrollable';
 @import 'molecules/cards';
 @import 'molecules/header';
 @import 'molecules/form-group';
