--- a/src/styles/molecules/_tabs.scss
+++ b/src/styles/molecules/_tabs.scss
@@ -1,30 +1,34 @@
-.tab{
+.tab {
 }
-.tab__nav{
-  margin-bottom: 0px;
+.tab__nav {
+  margin-bottom: 0;
   padding: 0;
   display: flex;
   justify-content: space-between;
   list-style: none;
 }
-.tab__item{
+.tab__item {
+  color: $color-grey-light;
   text-align: center;
   flex: 1;
   margin-bottom: -2px;
   padding: 7px 10px;
-  background-color: $color-primary-light;
-  border-top-right-radius: 10px;
-  font-size: $font-size;
+  // background-color: transparent;
+  // border-top-right-radius: 10px;
+  font-size: $font-size-l;
+  &:hover {
+    cursor: pointer;
+    color: $color-grey;
+  }
 }
-.tab__item--active{
-  background-color: white !important;
-  border: 2px solid $border-color;
-  border-bottom: 0;
-  a{
+.tab__item--active {
+  color: $color-grey;
+  border-bottom: 3px solid $color-primary-light;
+  a {
     color: grey;
   }
 }
-.tab__content{
+.tab__content {
   border: 2px solid $border-color;
   padding: 30px;
 }
