--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 $color-primary: #FC3447;
-$color-primary-dark: #6e050d;
-$color-primary-darker: #b60015;
+$color-primary-dark: #b60015;
+$color-primary-darker: #6e050d;
 $color-primary-light: #FD5D6C;
 $color-primary-lighter: #FE8C97;
 
@@ -22,7 +22,7 @@ $color-grey: #666;
 $color-grey-darker: #222;
 $color-grey-dark: #444;
 $color-grey-light: lightgrey;
-$color-grey-lighter: #eee;
+$color-grey-lighter: #f3f3f3;
 
 $border-color: $color-grey-light;
 $border-radius: 50px;
