--- a/src/styles/atoms/_buttons.scss
+++ b/src/styles/atoms/_buttons.scss
@@ -12,7 +12,7 @@
   color: #fff;
   background-color: $color-primary;
   &:hover{
-    background-color: $color-primary-light;
+    background-color: $color-primary-dark;
   }
 }
 
@@ -20,15 +20,15 @@
   color: #fff;
   background-color: $color-secondary;
   &:hover{
-    background-color: $color-secondary-light;
+    background-color: $color-secondary-dark;
   }
 }
 
 .button--tertiary{
   color: #fff;
-  background-color: $color-tertiary-darker;
+  background-color: $color-tertiary;
   &:hover{
-    background-color: $color-tertiary;
+    background-color: $color-tertiary-dark;
   }
 }
 
@@ -39,4 +39,8 @@
     background-color: #fff;
     color: $font-color-heading;
   }
+}
+.button--sm {
+  padding: 5px 10px;
+  font-size: 13px;
 }
