--- a/src/styles/atoms/_scrollable.scss
+++ b/src/styles/atoms/_scrollable.scss
@@ -1,4 +1,6 @@
 .scrollable {
   overflow: scroll;
   max-height: 300px;
+  border-top: 1px solid $border-color;
+  border-bottom: 1px solid $border-color;
 }
