--- a/src/styles/atoms/_layouts.scss
+++ b/src/styles/atoms/_layouts.scss
@@ -1,4 +1,14 @@
-.container {
-  max-width: 1100px;
-  margin: 0 auto;
+
+
+.section {
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+.section--light {
+  background-color: $color-grey-lighter;
+}
+.section--sm {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
