--- a/src/styles/atoms/_pagination.scss
+++ b/src/styles/atoms/_pagination.scss
@@ -1,20 +1,24 @@
 .pagination {
   display: flex;
+  margin-top: 20px;
 }
 
 .pagination__item{
+  flex: 0 0 auto;
+  text-align: center;
+  list-style: none;
   width: 100px;
   padding: 5px 0;
   border-radius: 10px;
   outline: none;
-  font-size: $font-size;
+  font-size: 13px;
   color: $font-color;
   background-color: transparent;
   border: 1px solid $border-color;
-  margin: 0 25px;
+  margin: 0 10px;
   cursor: pointer;
   &:hover{
-    background: $color-grey-light;
+    background: $color-grey-lighter;
   }
   &:first-child {
     margin-left: 0;
@@ -36,6 +40,12 @@
 .pagination__item--add{
   background-color: #fff;
   border: 1px dashed $border-color;
+}
+
+.pagination__item--remove{
+  background-color: #fff;
+  border: 1px solid $color-primary;
+  color: $color-primary;
 }
 
 .pagination__number{
