--- a/src/styles/molecules/_progressbar.scss
+++ b/src/styles/molecules/_progressbar.scss
@@ -3,21 +3,21 @@
   height: 100px;
   width: 50%;
   margin: 0 auto;
-  margin-bottom: 20px;
 }
 .progress__section {
   position: relative;
   flex: 1;
   text-align: center;
+  text-decoration: none;
   &:before {
     content: '';
     border-bottom: 10px solid $color-secondary-light;
     width: 100%;
     position: absolute;
     transform: translate(-100%, -50%);
-    top: 50%;
+    top: 35%;
     left: 50%;
-    z-index: -2;
+    z-index: 0;
   }
   &:first-child:before {
     display: none;
@@ -25,16 +25,19 @@
 }
 .progress__title {
   font-size: 18px;
-  margin-top: 70px;
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  bottom: 20%;
   color: $color-secondary-light;
 }
 .progress__dot {
   position: absolute;
-  top: 50%;
+  top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: #fff;
-  z-index: 0;
+  z-index: 2;
   width: 100%;
   &:after {
     position: absolute;
