--- a/src/styles/molecules/_banners.scss
+++ b/src/styles/molecules/_banners.scss
@@ -1,8 +1,16 @@
 .banner {
   background-color: $color-primary;
   color: rgba(#000, 0.5);
-  padding: 150px;
+  padding: 50px;
   text-align: center;
+}
+
+.banner--lg {
+  padding: 100px;
+}
+
+.banner--xl {
+  padding: 150px;
 }
 
 .banner__title {
